ansible.cfgの出力形式をyamlに変更し、冗長性を減らすために新しいBrewfileを追加。既存のBrewfileからの重複を削除し、アップグレードタスクを整理。新しいスクリプトでホスト固有のBrewfileを生成する機能を追加。

--- a/roles/homebrew/tasks/main.yml
+++ b/roles/homebrew/tasks/main.yml
@@ -50,6 +50,11 @@
 
 # ========= 実行フェーズ =========
 
+# アップグレードタスクのインクルード
+- name: Include upgrade tasks
+  ansible.builtin.include_tasks: upgrade.yml
+  tags: brew-upgrade, brew-upgrade-formula, brew-upgrade-cask, brew-upgrade-mas
+
 # チェックモード：実際には入れずに検証だけ
 - name: Dry-run brew bundle check (check-mode)
   ansible.builtin.shell: |
