--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,9 +1,12 @@
 [defaults]
 inventory = ./inventory/hosts.ini
-stdout_callback = default
+stdout_callback = yaml
 interpreter_python = auto_silent
 retry_files_enabled = False
 force_color = 1
 host_key_checking = False
 result_format = yaml
+verbosity = 1
+display_skipped_hosts = true
+display_ok_hosts = true
 
